# Gpu-run

./: .gitignore  Cargo.toml  README.md  README_PYPI.md  pyproject.toml  spec.md
.github/workflows/: publish.yml
flatpak/: gpu-run.desktop  io.github.DeadIndian.GpuRun.json  manifest.json  metadata.json
src/: batching.rs  cli.rs  daemon.rs  execution.rs  executors.rs  fingerprint.rs  lib.rs  main.rs  queue.rs  scheduler.rs  telemetry.rs  vram_safety.rs
winget/: manifest.yaml
