[package]
name = "gpu-run"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Intelligent GPU execution wrapper"
license = "MIT"
repository = ""
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs", "io-util", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "auto-initialize"], optional = true }

[features]
default = []
python = ["dep:pyo3"]

[lib]
name = "gpu_run"
crate-type = ["cdylib"]

[[bin]]
name = "gpu-run"
path = "src/main.rs"
