[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gpu-run"
description = "Intelligent GPU execution wrapper - Python package"
authors = [
    {name = "GPU-Run Team", email = "team@gpu-run.dev"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = []

[tool.maturin]
bindings = "pyo3"
features = ["python"]

[project.urls]
Homepage = "https://github.com/gpu-run/gpu-run"
Repository = "https://github.com/gpu-run/gpu-run"
Documentation = "https://github.com/gpu-run/gpu-run#readme"
"Bug Tracker" = "https://github.com/gpu-run/gpu-run/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"
text = "MIT"
